# aie2

02_Embeddings_and_RAG/: .gitignore  Pythonic_RAG_Assignment.ipynb  README_TESTING.md  example_metadata_usage.py  pyproject.toml  quick_test.py  test_all.py  test_demo.py  test_metadata_simple.py  test_metadata_support.py  test_rag_end_to_end.py
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
03_End-to-End_RAG/: .gitignore  MERGE.md  README_RAG_APP.md  app.py  requirements.txt  sample_airline_policy.txt
03_End-to-End_RAG/templates/: index.html
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb
05_Our_First_Agent_with_LangGraph/: .vercelignore  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  build_app.py  env_example.txt  pyproject.toml  requirements.txt  start_app.sh  test_server.py  vercel.json
05_Our_First_Agent_with_LangGraph/api/: index.py
05_Our_First_Agent_with_LangGraph/backend/: agent_setup.py  main.py  requirements.txt  simple.html  simple_server.py
05_Our_First_Agent_with_LangGraph/frontend/: package-lock.json  package.json
05_Our_First_Agent_with_LangGraph/frontend/public/: index.html
05_Our_First_Agent_with_LangGraph/frontend/src/: App.css  App.js
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
